bundle exec rubocop -R -a app spec && fix miscs

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,2 +1,12 @@
 Rails:
   Enabled: true
+
+Style/Documentation:
+  Enabled: false
+
+Metrics/LineLength:
+  Max: 100
+
+Metrics/BlockLength:
+  Exclude:
+    - 'spec/**/*'
